attempting to merge

--- a/templates/TheMangaReport24.html
+++ b/templates/TheMangaReport24.html
@@ -11,6 +11,10 @@
         padding: 0;
         margin: 0;
     }
+    h1{
+        text-align: center;
+    }
+
 </style>
 <body>
     <nav id="navagtion" class="nav-bar">
@@ -21,6 +25,8 @@
         </ul>
     </nav>
     <h1>The Numbers</h1>
+     <img src="{{ url_for('static', filename='images/Screenshot 2025-05-18 191713.png') }}" alt="PieCart">
+
 </body>
 <script>
     
