--- a/templates/index.html
+++ b/templates/index.html
@@ -11,6 +11,9 @@
         padding: 0;
         margin: 0;
     }
+     h1{
+        text-align: center;
+    } 
 </style>
 <body>
     <nav id="navagtion" class="nav-bar">
