attempting to merge

--- a/templates/TheAwards.html
+++ b/templates/TheAwards.html
@@ -20,6 +20,7 @@
             <li><a href="{{ url_for('index') }}">Home</a></li>
             <li><a href="{{ url_for('The_Awards') }}">The Awards</a></li>
             <li><a href="{{ url_for('The_numbers') }}">The Manga Numbers</a></li>
+            <li><a href="{{ url_for('Additions') }}">Additions</a></li>
         </ul>
     </nav> 
     <h1>The Awards</h1>
