--- a/templates/index.html
+++ b/templates/index.html
@@ -21,6 +21,7 @@
             <li><a href="{{ url_for('index') }}">Home</a></li>
             <li><a href="{{ url_for('The_Awards') }}">The Awards</a></li>
             <li><a href="{{ url_for('The_numbers') }}">The Manga Numbers</a></li>
+            <li><a href="{{ url_for('Additions') }}">Additions</a></li>
         </ul>
     </nav>
     <h1>Home</h1>
