attempting to merge

--- a/templates/Additions.html
+++ b/templates/Additions.html
@@ -9,10 +9,18 @@
     *{
         padding: 0;
         margin: 0;
+        background-color: black;
+        
     }
      h1{
+        color: white;
         text-align: center;
     } 
+    h3{
+        color: whitesmoke;
+    }
+    
+
 </style>
 <body>
     <nav id="navagtion" class="nav-bar">
