--- a/templates/TheMangaReport24.html
+++ b/templates/TheMangaReport24.html
@@ -26,7 +26,7 @@
         </ul>
     </nav>
     <h1>The Numbers</h1>
-     <img src="{{ url_for('static', filename='images/Screenshot 2025-05-18 191713.png') }}" alt="PieCart">
+     <img src="{{ url_for('static', filename='images/Screenshot 2025-05-18 191713.png') }}" alt="PieCart showing how much of my manga colltion is made up by the top five manga comparedy to the rest of my manga colltion">
 
 </body>
 <script>
