attempting to merge

--- a/templates/TheAwards.html
+++ b/templates/TheAwards.html
@@ -24,6 +24,60 @@
         </ul>
     </nav> 
     <h1>The Awards</h1>
+
+    <h3>MVP</h3>
+    <div id="MVP">
+
+    </div>
+    
+    <h3>Best Anime</h3>
+    <div id="Best_anime">
+
+    </div>
+
+    <h3>Best Movie</h3>
+    <div id="Best_movie">
+
+    </div>
+    
+    <h3>Rookie Of The Year</h3>
+    <div id="Rookie_Of_The_Year">
+
+    </div>
+
+    <h3>Best Romcom Of The Year</h3>
+    <div id="Best_Romcom_Of_The_Year">
+
+    </div>
+
+    <h3>Most Chapters Read</h3>
+    <div id="Most_Chapters_Read:">
+
+    </div>
+
+    <h3>Best Mangaka Of The Year</h3>
+    <div id="Best_Mangaka_Of_The_Year">
+
+    </div>
+
+    <h3>Biggest Comeback Of The Year</h3>
+    <div id="Biggest_Comeback_of_the_year">
+
+    </div>
+
+    <h3>Best Ending of the year</h3>
+    <div id="Best_Ending_of_the_year">
+
+    </div>
+
+    <h3>Biggest Fall Off of the year</h3>
+    <div id="Biggest Fall Off of the year">
+
+    </div>
+    <h3>The “Dallas Cowboys” award</h3>
+    <div id="The_Dallas_Cowboys_award">
+
+    </div>
 </body>
 <script>
     
