--- a/templates/TheMangaReport24.html
+++ b/templates/TheMangaReport24.html
@@ -26,6 +26,11 @@
         </ul>
     </nav>
     <h1>The Numbers</h1>
+
+
+
+
+    <h3>How much dose the top five take up of my colltion</h3>
      <img src="{{ url_for('static', filename='images/Screenshot 2025-05-18 191713.png') }}" alt="PieCart showing how much of my manga colltion is made up by the top five manga comparedy to the rest of my manga colltion">
 
 </body>
