--- a/templates/index.html
+++ b/templates/index.html
@@ -14,6 +14,9 @@
      h1{
         text-align: center;
     } 
+    h3{
+        text-align: center;
+    }
 </style>
 <body>
     <nav id="navagtion" class="nav-bar">
@@ -24,7 +27,9 @@
             <li><a href="{{ url_for('Additions') }}">Additions</a></li>
         </ul>
     </nav>
-    <h1>Home</h1>
+    <h1>Welcome To My Manga Colltion</h1>
+    <h3>What is This Page About</h3>
+
 </body>
 <script>
     
