--- a/templates/Additions.html
+++ b/templates/Additions.html
@@ -6,6 +6,42 @@
     <title>Additions</title>
 </head>
 <style>
+    * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+        font-family: Arial, Helvetica, sans-serif;
+    }
+
+    body {
+        background-color: #f4f4f4;
+    }
+
+    nav {
+        width: 100%;
+        background-color: #222;
+        padding: 15px 0;
+    }
+
+    nav ul {
+        display: flex;
+        justify-content: center;
+        list-style: none;
+        gap: 40px;
+    }
+
+    nav ul li a {
+        color: white;
+        text-decoration: none;
+        font-size: 1.1em;
+        font-weight: bold;
+        transition: 0.3s;
+    }
+
+    nav ul li a:hover {
+        color: #ffcc00;
+        text-decoration: underline;
+    }
     *{
         padding: 0;
         margin: 0;
@@ -36,51 +72,51 @@
         <h3>sires im thinking about adding</h3>
         <h3>January</h3>
         <div id="January">
-
+            <p></p>
         </div>
         <h3>February</h3>
         <div id="February">
-
+            <p></p>
         </div>
         <h3>March</h3>
         <div id="March">
-
+            <p></p>
         </div>
         <h3>April</h3>
         <div id="April">
-
+            <p></p>
         </div>
         <h3>May</h3>
         <div id="May">
-
+            <p></p>
         </div>
         <h3>June</h3>
         <div id="June">
-
+            <p></p>
         </div>
         <h3>July</h3>
         <div id="July">
-
+            <p></p>
         </div>
         <h3>August</h3>
         <div id="August">
-
+            <p></p>
         </div>
         <h3>September</h3>
         <div id="September">
-
+            <p></p>
         </div>
         <h3>October</h3>
         <div id="October">
-
+            <p></p>
         </div>
         <h3>November</h3>
         <div id="November">
-
+            <p></p>
         </div>
         <h3>December</h3>
         <div id="December">
-
+            <p></p>
         </div>
 
 
