--- a/templates/TheAwards.html
+++ b/templates/TheAwards.html
@@ -13,6 +13,43 @@
      h1{
         text-align: center;
     }
+    * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+        font-family: Arial, Helvetica, sans-serif;
+    }
+
+    body {
+        background-color: #f4f4f4;
+    }
+
+    
+    nav {
+        width: 100%;
+        background-color: #222;
+        padding: 15px 0;
+    }
+
+    nav ul {
+        display: flex;
+        justify-content: center;
+        list-style: none;
+        gap: 40px;
+    }
+
+    nav ul li a {
+        color: white;
+        text-decoration: none;
+        font-size: 1.1em;
+        font-weight: bold;
+        transition: 0.3s;
+    }
+
+    nav ul li a:hover {
+        color: #ffcc00;
+        text-decoration: underline;
+    }
 </style>
 <body>
     <nav id="navagtion" class="nav-bar">
@@ -24,58 +61,78 @@
         </ul>
     </nav> 
     <h1>The Awards</h1>
-
-    <h3>MVP</h3>
     <div id="MVP">
+    <h3>MVP</h3>
+    <h5>Winner: Black Clover</h5>
+    
 
     </div>
-    
-    <h3>Best Anime</h3>
     <div id="Best_anime">
+    <h3>Best Anime</h3>
+    <h5>Winner:</h5>
+    
 
     </div>
 
-    <h3>Best Movie</h3>
+    
     <div id="Best_movie">
+        <h3>Best Movie</h3>
+        <h5>Winner:</h5>
 
     </div>
     
-    <h3>Rookie Of The Year</h3>
+    
     <div id="Rookie_Of_The_Year">
+        <h3>Rookie Of The Year</h3>
+        <h5>Winner:</h5>
 
     </div>
 
-    <h3>Best Romcom Of The Year</h3>
+    
     <div id="Best_Romcom_Of_The_Year">
+        <h3>Best Romcom Of The Year</h3>
+        <h5>Winner:</h5>
 
     </div>
 
-    <h3>Most Chapters Read</h3>
+    
     <div id="Most_Chapters_Read:">
+        <h3>Most Chapters Read</h3>
+        <h5>Winner:</h5>
 
     </div>
 
-    <h3>Best Mangaka Of The Year</h3>
+    
     <div id="Best_Mangaka_Of_The_Year">
+        <h3>Best Mangaka Of The Year</h3>
+        <h5>Winner:</h5>
 
     </div>
 
-    <h3>Biggest Comeback Of The Year</h3>
+    
     <div id="Biggest_Comeback_of_the_year">
+        <h3>Biggest Comeback Of The Year</h3>
+        <h5>Winner:</h5>
 
     </div>
 
-    <h3>Best Ending of the year</h3>
+    
     <div id="Best_Ending_of_the_year">
+        <h3>Best Ending of the year</h3>
+        <h5>Winner:</h5>
 
     </div>
 
-    <h3>Biggest Fall Off of the year</h3>
+    
     <div id="Biggest Fall Off of the year">
+        <h3>Biggest Fall Off of the year</h3>
+        <h5>Winner:</h5>
 
     </div>
-    <h3>The “Dallas Cowboys” award</h3>
+    
     <div id="The_Dallas_Cowboys_award">
+        <h3>The “Dallas Cowboys” award</h3>
+        <h5>Winner:</h5>
 
     </div>
 </body>
