--- a/templates/TheMangaReport24.html
+++ b/templates/TheMangaReport24.html
@@ -14,6 +14,42 @@
     h1{
         text-align: center;
     }
+    * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+        font-family: Arial, Helvetica, sans-serif;
+    }
+
+    body {
+        background-color: #f4f4f4;
+    }
+
+    nav {
+        width: 100%;
+        background-color: #222;
+        padding: 15px 0;
+    }
+
+    nav ul {
+        display: flex;
+        justify-content: center;
+        list-style: none;
+        gap: 40px;
+    }
+
+    nav ul li a {
+        color: white;
+        text-decoration: none;
+        font-size: 1.1em;
+        font-weight: bold;
+        transition: 0.3s;
+    }
+
+    nav ul li a:hover {
+        color: #ffcc00;
+        text-decoration: underline;
+    }
 
 </style>
 <body>
